text-shadow visibility issue solved

--- a/css/main.css
+++ b/css/main.css
@@ -502,7 +502,7 @@ ul {
 .new-main .new-main-heading h2 {
   font-size: 4rem;
   color: #00704a;
-  text-shadow: 7px 5px 0px rgba(0, 0, 0, 0.3);
+  text-shadow: 3px 3px 0px rgba(0, 0, 0, 0.3);
   margin: 8rem 0;
 }
 
@@ -573,7 +573,7 @@ ul {
 .menu-main .menu-main-heading h2 {
   font-size: 4rem;
   color: #00704a;
-  text-shadow: 7px 5px 0px rgba(0, 0, 0, 0.3);
+  text-shadow: 3px 3px 0px rgba(0, 0, 0, 0.3);
   margin: 5rem 0 3rem 0;
 }
 
