--- a/css/pages/_new.scss
+++ b/css/pages/_new.scss
@@ -25,7 +25,7 @@
     h2 {
       font-size: 4rem;
       color: rgb(0, 112, 74);
-      text-shadow: 7px 5px 0px rgba(0, 0, 0, 0.3);
+      text-shadow: 3px 3px 0px rgba(0, 0, 0, 0.3);
       margin: 8rem 0;
     }
   }
